--- a/share/config/localisation/deutsch.conf
+++ b/share/config/localisation/deutsch.conf
@@ -3,7 +3,7 @@
 	iso_code = de
 	coding = UTF-8
 	purpose = global localisation
-	version = 0.04
+	version = 0.05
 </about>
 <app>
 	<general>
@@ -33,13 +33,14 @@
 		tools = Werkzeuge
 		document = Do&kument
 		document_change = Wähle
+		document_convert = Konvertieren
 		document_syntaxmode = Syntaxmode
 		document_syntaxmode_A-M = A - M
 		document_syntaxmode_N-Z = N - Z
 		document_syntaxmode_compiled = Kompilierte
 		document_syntaxmode_interpreted = Interpretierte
-		document_syntaxmode_document = Auszeichnungs
 		document_syntaxmode_data_structure = Datenstruktur
+		document_syntaxmode_document = Auszeichnungs
 		document_syntaxmode_web = Internet
 		document_syntaxmode_special = Spezial
 		document_tab_width = Tab Breite
@@ -51,6 +52,7 @@
 		view_contextmenu = Kontextmenüs
 		view_editpanel_contexmenu = Editor
 		view_textmargin = Textrand
+		view_text_fold = Textfalten
 		config = Einstellungen
 		config_app_lang = Sprache
 		config_global = Haupteinstellungen
@@ -152,6 +154,10 @@
 					sentencecase = Sentencecase
 					spaces2tabs = Leerzeichen zu Tabs
 					tabs2spaces = Tabs zu Leerzeichen
+					spaces2entities = Leerzeichen zu Entity
+					entities2spaces = Entity zu Leerzeichen
+					chars2entities = Buchstaben zu Entities
+					entities2chars = Entities zu Buchstaben
 				</convert>
 				<comment>
 					add-perl = Script-Kommentar Hinzufügen
@@ -266,13 +272,14 @@
 		</bookmark>
 		<tool>
 			note = Notiere
-			run-document = Start
-			stop-document = Stop
+			note-selection = Notiere Markierung
+			interpreter-run-document = Start
+			interpreter-stop-document = Stop
+			output-inc = @INC
 		</tool>
 		<document>
 			auto-indention = Autoeinrückung
 			brace-indention = Klammereinrückung
-			brace-light = Klammerhervorhebung
 			<EOL>
 				auto = Angleichen
 				cr+lf = CR+LF (Windows)
@@ -373,6 +380,13 @@
 			<editpanel>
 				EOL = Zeilenendsymbol
 				caret-line = Aktuelle Zeile
+				brace-light = Klammerhervorhebung
+				<fold-toggle>
+					all = Alle
+					here = Hier
+					recursively = Rekursiv
+					siblings = Geschwister
+				</fold-toggle>
 				font = Schriftart
 				indention-guide = Einrückmarkierung
 				line-wrap = Zeilenumbruch
@@ -380,17 +394,18 @@
 				whitespace = Leerzeichen
 				<contextmenu>
 					custom = Eigenes
-					default = Standart
+					default = Standard
 					no = Kein Menü
 				</contextmenu>
 				<margin>
 					marker = Markerrand
 					line-number = Zeilennummern
-					text-fold = Text Falten
+					text-fold = Faltrand
 					<text>
 						0 = 0 px
 						1 = 1
 						2 = 2
+						3 = 3
 						4 = 4
 						6 = 6
 						8 = 8
@@ -417,6 +432,10 @@
 				search = Suchzeile
 				search-goto = Suchzeile
 			</toolbar>
+			<webpage>
+				documentation = Netz Doku
+				forum = Perlforum
+			</webpage>
 			window-stay-on-top = Im Vordergrund
 		</view>
 		<config>
@@ -564,6 +583,10 @@
 					sentencecase = Satzanfänge zu Grossbuchstaben umwandeln
 					spaces2tabs = mehrere Leerzeichen zu jeweils einem Tab
 					tabs2spaces = jedes Tab zu n Leerzeichen, Anzahl entspricht Breite
+					spaces2entities = alle Leerzeichen zu &npsp; konvertieren
+					entities2spaces = &npsp; zu Leerzeichen konvertieren
+					chars2entities = Zeichen des ISO 8859-1 in HTML-Entitäten konvertieren
+					entities2chars = HTML-Entitäten in ISO 8859-1-Zeichen umwandeln
 				</convert>
 				<comment>
 					add-perl = fügt ein \# an jede Einrückung an
@@ -676,19 +699,20 @@
 			delete-all = lösche alle Lesezeichen
 		</bookmark>
 		<tool>
-			note = wechsle zum Notizblock
-			run-document = starte aktuelles Programm und zeig Ergebnis im Outputpanel
-			stop-document = halte Interpreterprozess des Oututpanels an
+			note = wechsle Fokus zum Notizblock
+			note-selection = füge Markierung an den Text im Notizblock
+			interpreter-run-document = starte aktuelles Programm und zeig Ergebnis im Outputpanel
+			interpreter-stop-document = halte Interpreterprozess des Oututpanels an
+			output-inc = zeige die @INC-Pfade im Ausgabepanel
 		</tool>
 		<document>
 			auto-indention = rückt bei Enter neue Zeilen wie vorige ein
 			brace-indention = beachtet Einrückungen nach geschweiften Klammern
-			brace-light = hebt Paare zugehöriger Klammern hervor
 			<EOL>
 				auto = Zeilenendformat der ersten Zeile annehmen
-				cr+lf = Zeilenenden in den Windowsstandart umwandeln
-				cr = Zeilenenden in den Applestandart umwandeln
-				lf = Zeilenenden in den UNIXstandart umwandeln
+				cr+lf = Zeilenenden in den Windowsstandard umwandeln
+				cr = Zeilenenden in den Applestandard umwandeln
+				lf = Zeilenenden in den UNIXstandard umwandeln
 			</EOL>
 			<change>
 				back = springe zum letztbenutzen Dokument
@@ -784,6 +808,13 @@
 			<editpanel>
 				EOL = Sicharkeit der Zeilenendzeichen (EOL) umschalten
 				caret-line = hebt Zeile hervor in der sich Textcursor befindet
+				brace-light = hebt Paare zugehöriger Klammern hervor
+				<fold-toggle>
+					all = falte alle sichtbaren und unsichtbaren Knoten
+					here = nur angewählten Knoten ein oder ausklappen
+					recursively = falten des angewählten Knotens und all seine Kinder
+					siblings = alle Knoten mit dem selben übergeordneten Knoten falten
+				</fold-toggle>
 				font = Dialog für Schrift Einstellungen
 				indention-guide = gepunktete Linien im Abstand der Tab - Breite
 				line-wrap = bricht lange Zeilen am Fensterrand um (nur optisch)
@@ -791,17 +822,18 @@
 				whitespace = mache Leerzeichen (Punkte) und Tabs (Pfeile) sichtbar
 				<contextmenu>
 					custom = aktiviere anpassbare Editor-Kontextmenüs
-					default = aktiviere standart Scintilla-Kontextmenüs
+					default = aktiviere standard Scintilla-Kontextmenüs
 					no = deaktiviere alle Editor-Kontextmenüs
 				</contextmenu>
 				<margin>
 					marker = Rand für Lesezeichen, Marker, Debug-Stops ...
 					line-number = Zeilennummern an und abschalten
-					text-fold = Rand für Textfaltsymbole an und abschalten
+					text-fold = Rand für Textfaltsymbole an oder abschalten
 					<text>
 						0 = stelle Extrarand an beiden Seiten des Textfelds auf 0 pixel
 						1 = stelle Extrarand an beiden Seiten des Textfelds auf 1 pixel
 						2 = stelle Extrarand an beiden Seiten des Textfelds auf 2 pixel
+						3 = stelle Extrarand an beiden Seiten des Textfelds auf 3 pixel
 						4 = stelle Extrarand an beiden Seiten des Textfelds auf 4 pixel
 						6 = stelle Extrarand an beiden Seiten des Textfelds auf 6 pixel
 						8 = stelle Extrarand an beiden Seiten des Textfelds auf 8 pixel
@@ -828,6 +860,10 @@
 				search = Werkzeugleiste mit Such- und Navigationsfunktionen
 				search-goto = benutze Suchfunktion in Suchzeile
 			</toolbar>
+			<webpage>
+				documentation = öffne Dokumentation auf der Heimseite, mit deinem Standardbrowser
+				forum = öffne Seite eines Perlforums, passend zur eingestellten Sprache
+			</webpage>
 			window-stay-on-top = Programmfenster bleibt immer im Vordergrund
 		</view>
 		<config>
@@ -847,7 +883,7 @@
 					commandlist = Definition das Befehle, Tastenkürzel, Icons, 
 					menubar = öffne Definitionsdatei des Hauptmenüs
 					contextmenu = öffne Definitionsdatei der Kontextmenüs
-					toolbar = öffne Standart-Definitionsdatei aller Werkzeugleisten
+					toolbar = öffne Standard-Definitionsdatei aller Werkzeugleisten
 					maintoolbar = öffne Definitionsdatei der Werkzeugleiste
 					searchbar = öffne Definitionsdatei der Suchleiste
 					statusbar = öffne Definitionsdatei der Statuszeile
@@ -883,8 +919,8 @@
 					pascal = Datei mit Niklaus Wirth's prozedurale Sprache Pascal
 					perl = Datei mit Syntaxmode für Larry Walls Perl
 					php = Rasmus Lehrdorf PHP Hypertext Prozessors
-					ps = Adobe Dokumentbeschreibungssprache Postscript
 					property = einfache Formate für Konfigurationsdateien
+					ps = Adobe Dokumentbeschreibungssprache Postscript
 					python = Guido van Rossums dynamische Sprache Python
 					ruby = Yukihiro "Matz" Matsumoto's voll objektorientiertes Ruby
 					scheme = Syntaxmode des MIT LISP-Dialekt Scheme öffnen
