--- a/share/config/localisation/norsk.conf
+++ b/share/config/localisation/norsk.conf
@@ -3,7 +3,7 @@
 	iso_code = nb
 	coding = UTF-8
 	purpose = global localisation
-	version = 0.04
+	version = 0.05
 </about>
 <app>
 	<general>
@@ -33,13 +33,14 @@
 		tools = Verktøy
 		document = Do&kument
 		document_change = Velg
+		document_convert = Konvertieren
 		document_syntaxmode = Syntaxmodus
 		document_syntaxmode_A-M = A - M
 		document_syntaxmode_N-Z = N - Z
 		document_syntaxmode_compiled = Kompilerte
 		document_syntaxmode_interpreted = Interpreterte
-		document_syntaxmode_document = Markeringsspråk
 		document_syntaxmode_data_structure = Datastruktur
+		document_syntaxmode_document = Markeringsspråk
 		document_syntaxmode_web = Internett
 		document_syntaxmode_special = Andre
 		document_tab_width = Tab Bredde
@@ -51,6 +52,7 @@
 		view_contextmenu = Kontekstmeny
 		view_editpanel_contexmenu = Editor
 		view_textmargin = Tekstkantavstand
+		view_text_fold = Textfalten
 		config = Instillinger
 		config_app_lang = Språk
 		config_global = Hovedinstillinger
@@ -62,7 +64,7 @@
 	</menu>
 	<status>
 		chars = Tegn
-		cloumn = Spalt
+		column = Spalt
 		line = Linje
 		lines = Linjer
 		selection = Markering
@@ -152,6 +154,10 @@
 					sentencecase = Stor første bokstave på setninger
 					spaces2tabs = Blanktegn til tabs
 					tabs2spaces = Tabs til blanktegn
+					spaces2entities = blanktegn til Entity
+					entities2spaces = Entity til blanktegn
+					chars2entities = Buchstaben til Entities
+					entities2chars = Entities til Buchstaben
 				</convert>
 				<comment>
 					add-perl = sett inn Script-kommentar
@@ -266,13 +272,14 @@
 		</bookmark>
 		<tool>
 			note = Notiere
-			run-document = Start
-			stop-document = Stop
+			note-selection = Notiere Markierung
+			interpreter-run-document = Start
+			interpreter-stop-document = Stop
+			output-inc = @INC
 		</tool>
 		<document>
 			auto-indention = Autoeinrückung
 			brace-indention = Klammereinrückung
-			brace-light = Klammerhervorhebung
 			<EOL>
 				auto = Angleichen
 				cr+lf = CR+LF (Windows)
@@ -373,6 +380,13 @@
 			<editpanel>
 				EOL = Zeilenendsymbol
 				caret-line = Aktuelle Zeile
+				brace-light = Klammerhervorhebung
+				<fold-toggle>
+					all = Alle
+					here = Hier
+					recursively = Rekursiv
+					siblings = Geschwister
+				</fold-toggle>
 				font = Schriftart
 				indention-guide = Einrückmarkierung
 				line-wrap = Zeilenumbruch
@@ -386,11 +400,12 @@
 				<margin>
 					marker = Markerrand
 					line-number = Zeilennummern
-					text-fold = Text Falten
+					text-fold = Faltrand
 					<text>
 						0 = 0 px
 						1 = 1
 						2 = 2
+						3 = 3
 						4 = 4
 						6 = 6
 						8 = 8
@@ -417,6 +432,10 @@
 				search = Suchzeile
 				search-goto = Suchzeile
 			</toolbar>
+			<webpage>
+				documentation = Netz Doku
+				forum = Perlforum
+			</webpage>
 			window-stay-on-top = Im Vordergrund
 		</view>
 		<config>
@@ -500,7 +519,7 @@
 			reload = lade aktuelle Datei erneut vom Speichermedium (HDD)
 			reload-all = alle offenen Dateien erneut Einlesen
 			rename = ändere Dateinamen des aktuellen Dokuments
-			insert =  füge Inhalt einer Datei am Textcursor ein
+			insert = füge Inhalt einer Datei am Textcursor ein
 			<save>
 				current = speichert das aktuelle Dokument in die Datei
 				all = speichert alle offenen Dokumente
@@ -538,7 +557,7 @@
 			</changes>
 			cut = entfernt markierten Text und speichert ihn
 			copy = kopiert markierten Text in der Zwischenablage
-			paste =  fügt Inhalt der Zwischenablage in den Text ein
+			paste = fügt Inhalt der Zwischenablage in den Text ein
 			replace = tauscht markierten Text mit der Zwischenablage
 			delete = entfernt markierten Text ohne ihn zu speichern
 			<line>
@@ -564,6 +583,10 @@
 					sentencecase = Satzanfänge zu Grossbuchstaben umwandeln
 					spaces2tabs = mehrere Leerzeichen zu jeweils einem Tab
 					tabs2spaces = jedes Tab zu n Leerzeichen, Anzahl entspricht Breite
+					spaces2entities = alle Leerzeichen zu &npsp; konvertieren
+					entities2spaces = &npsp; zu Leerzeichen konvertieren
+					chars2entities = Zeichen des ISO 8859-1 in HTML-Entitäten konvertieren
+					entities2chars = HTML-Entitäten in ISO 8859-1-Zeichen umwandeln
 				</convert>
 				<comment>
 					add-perl = fügt ein \# an jede Einrückung an
@@ -676,14 +699,15 @@
 			delete-all = lösche alle Lesezeichen
 		</bookmark>
 		<tool>
-			note = wechsle zum Notizblock
-			run-document = starte aktuelles Programm und zeig Ergebnis im Outputpanel
-			stop-document = halte Interpreterprozess des Oututpanels an
+			note = wechsle Fokus zum Notizblock
+			note-selection = füge Markierung an den Text im Notizblock
+			interpreter-run-document = starte aktuelles Programm und zeig Ergebnis im Outputpanel
+			interpreter-stop-document = halte Interpreterprozess des Oututpanels an
+			output-inc = zeige die @INC-Pfade im Ausgabepanel
 		</tool>
 		<document>
 			auto-indention = rückt bei Enter neue Zeilen wie vorige ein
 			brace-indention = beachtet Einrückungen nach geschweiften Klammern
-			brace-light = hebt Paare zugehöriger Klammern hervor
 			<EOL>
 				auto = Zeilenendformat der ersten Zeile annehmen
 				cr+lf = Zeilenenden in den Windowsstandart umwandeln
@@ -784,6 +808,13 @@
 			<editpanel>
 				EOL = Sicharkeit der Zeilenendzeichen (EOL) umschalten
 				caret-line = hebt Zeile hervor in der sich Textcursor befindet
+				brace-light = hebt Paare zugehöriger Klammern hervor
+				<fold-toggle>
+					all = falte alle sichtbaren und unsichtbaren Knoten
+					here = nur angewählten Knoten ein oder ausklappen
+					recursively = falten des angewählten Knotens und all seine Kinder
+					siblings = alle Knoten mit dem selben übergeordneten Knoten falten
+				</fold-toggle>
 				font = Dialog für Schrift Einstellungen
 				indention-guide = gepunktete Linien im Abstand der Tab - Breite
 				line-wrap = bricht lange Zeilen am Fensterrand um (nur optisch)
@@ -797,11 +828,12 @@
 				<margin>
 					marker = Rand für Lesezeichen, Marker, Debug-Stops ...
 					line-number = Zeilennummern an und abschalten
-					text-fold = Rand für Textfaltsymbole an und abschalten
+					text-fold = Rand für Textfaltsymbole an oder abschalten
 					<text>
 						0 = stelle Extrarand an beiden Seiten des Textfelds auf 0 pixel
 						1 = stelle Extrarand an beiden Seiten des Textfelds auf 1 pixel
 						2 = stelle Extrarand an beiden Seiten des Textfelds auf 2 pixel
+						3 = stelle Extrarand an beiden Seiten des Textfelds auf 3 pixel
 						4 = stelle Extrarand an beiden Seiten des Textfelds auf 4 pixel
 						6 = stelle Extrarand an beiden Seiten des Textfelds auf 6 pixel
 						8 = stelle Extrarand an beiden Seiten des Textfelds auf 8 pixel
@@ -828,6 +860,10 @@
 				search = Werkzeugleiste mit Such- und Navigationsfunktionen
 				search-goto = benutze Suchfunktion in Suchzeile
 			</toolbar>
+			<webpage>
+				documentation = öffne Dokumentation auf der Heimseite, mit deinem Standardbrowser
+				forum = öffne Seite eines Perlforums, passend zur eingestellten Sprache
+			</webpage>
 			window-stay-on-top = Programmfenster bleibt immer im Vordergrund
 		</view>
 		<config>
@@ -883,8 +919,8 @@
 					pascal = Datei mit Niklaus Wirth's prozedurale Sprache Pascal
 					perl = Datei mit Syntaxmode für Larry Walls Perl
 					php = Rasmus Lehrdorf PHP Hypertext Prozessors
-					ps = Adobe Dokumentbeschreibungssprache Postscript
 					property = einfache Formate für Konfigurationsdateien
+					ps = Adobe Dokumentbeschreibungssprache Postscript
 					python = Guido van Rossums dynamische Sprache Python
 					ruby = Yukihiro "Matz" Matsumoto's voll objektorientiertes Ruby
 					scheme = Syntaxmode des MIT LISP-Dialekt Scheme öffnen
