--- a/share/config/localisation/cesky.conf
+++ b/share/config/localisation/cesky.conf
@@ -3,7 +3,7 @@
 	iso_code = cs
 	coding = UTF-8
 	purpose = global localisation
-	version = 0.04
+	version = 0.05
 </about>
 <app>
 	<general>
@@ -33,6 +33,7 @@
 		tools = Tools
 		document = Document
 		document_change = Change
+		document_convert = Convert
 		document_syntaxmode = Syntaxmode
 		document_syntaxmode_A-M = A - M
 		document_syntaxmode_N-Z = N - Z
@@ -51,6 +52,7 @@
 		view_contextmenu = Context Menus
 		view_editpanel_contexmenu = Edit Panel
 		view_textmargin = Text Margin
+		view_text_fold = Folding
 		config = Config
 		config_app_lang = Language
 		config_global = Global Config File
@@ -152,6 +154,10 @@
 					sentencecase = Sentencecase
 					spaces2tabs = Spaces To Tabs
 					tabs2spaces = Tabs To Spaces
+					spaces2entities = Spaces To Entities
+					entities2spaces = Entities To Spaces
+					chars2entities = Chars To Entities
+					entities2chars = Entities To Chars 
 				</convert>
 				<comment>
 					add-perl = Add Perl Style Comment
@@ -266,13 +272,14 @@
 		</bookmark>
 		<tool>
 			note = Note
-			run-document = Run
-			stop-document = Stop
+			note-selection = Note Selection
+			interpreter-run-document = Run
+			interpreter-stop-document = Stop
+			output-inc = @INC
 		</tool>
 		<document>
 			auto-indention = Autoindention
 			brace-indention = Braceindention
-			brace-light = Bracelight
 			<EOL>
 				auto = Align
 				cr+lf = CR+LF (Windows)
@@ -373,6 +380,13 @@
 			<editpanel>
 				EOL = Lineend Marker
 				caret-line = Caret Line
+				brace-light = Bracelight
+				<fold-toggle>
+					all = All
+					here = Here
+					recursively = Recursively
+					siblings = Siblings
+				</fold-toggle>
 				font = Font
 				indention-guide = Indention Guide
 				line-wrap = Line Wrap
@@ -386,11 +400,12 @@
 				<margin>
 					marker = Marker Margin
 					line-number = Line Number
-					text-fold = Text Folding
+					text-fold = Fold Margin
 					<text>
 						0 = 0 px
 						1 = 1
 						2 = 2
+						3 = 3
 						4 = 4
 						6 = 6
 						8 = 8
@@ -417,6 +432,10 @@
 				search = Searchbar
 				search-goto = Searchbar
 			</toolbar>
+			<webpage>
+				documentation = Online Docs
+				forum = Perl Forum
+			</webpage>
 			window-stay-on-top = Stay On Top
 		</view>
 		<config>
@@ -528,13 +547,13 @@
 		</file>
 		<edit>
 			<changes>
-				undo = mache letzte ÃƒÆ’Ã¢â‚¬Å¾nderung im Dokument rÃƒÆ’Ã‚Â¼ckgÃƒÆ’Ã‚Â¤ngig
-				redo = zuletzt rÃƒÆ’Ã‚Â¼ckgÃƒÆ’Ã‚Â¤ngig gemachte ÃƒÆ’Ã¢â‚¬Å¾nderung wiederholen
-				undo-several = mache mehrere ÃƒÆ’Ã¢â‚¬Å¾nderungen rÃƒÆ’Ã‚Â¼ckgÃƒÆ’Ã‚Â¤ngig
-				redo-several = bringe mehrere ÃƒÆ’Ã¢â‚¬Å¾nderungen wieder
-				goto-begin = bringe Zustand vor allen ÃƒÆ’Ã¢â‚¬Å¾nderungen zurÃƒÆ’Ã‚Â¼ck
-				goto-end = hole alle gemachte ÃƒÆ’Ã¢â‚¬Å¾nderungen wieder
-				delete = lÃƒÆ’Ã‚Â¶sche alle Aufzeichnungen ÃƒÆ’Ã‚Â¼ber ÃƒÆ’Ã¢â‚¬Å¾nderungen
+				undo = undo the last change in the current document
+				redo = redo the last change made undone
+				undo-several = go several steps back in edit history
+				redo-several = go several steps forward in edit history
+				goto-begin = go back to the state before the first edit
+				goto-end = go forward to the state after the last edit
+				delete = deleting history of all editing changes
 			</changes>
 			cut = cut selected text and store it in the clipboard
 			copy = copy selected text to the clipboard
@@ -564,6 +583,10 @@
 					sentencecase = turn first char of every sentence uppercase
 					spaces2tabs = convert groups of whitespace to tabs
 					tabs2spaces = depends on current tab width
+					spaces2entities = convert all whitespace to &npsp;
+					entities2spaces = convert &npsp; to whitespace
+					chars2entities = convert ISO 8859-1 character to HTML entities
+					entities2chars = convert HTML entities to ISO 8859-1 characters
 				</convert>
 				<comment>
 					add-perl = insert \# after every indention
@@ -677,13 +700,14 @@
 		</bookmark>
 		<tool>
 			note = jump to the notepad
-			run-document = run current programm and show result in output panel
-			stop-document = stop the current running output panel process
+			note-selection = paste selected text into the notepad
+			interpreter-run-document = run current programm and show result in output panel
+			interpreter-stop-document = stop the current running output panel process
+			output-inc = display the include pathes in the ouput panel
 		</tool>
 		<document>
 			auto-indention = indents new line like previous when Enter pressed 
 			brace-indention = obey right indention after curly braces when press enter
-			brace-light = highlights associated pairs of braices
 			<EOL>
 				auto = make all line endings like in first line
 				cr+lf = line endings for Windows or Dos
@@ -784,6 +808,13 @@
 			<editpanel>
 				EOL = switch visibility of the end of line marker
 				caret-line = highlights row where caret(textcursor) is located
+				brace-light = highlights associated pairs of braices
+				<fold-toggle>
+					all = fold or unfold all visible and not visible nodes
+					here = fold or unfold only the node on selected position
+					recursively = fold or unfold this and all nodes below in hierarchy
+					siblings = fold or unfold all nodes with same parent
+				</fold-toggle>
 				font = change font family, size, style etc.
 				indention-guide = vertical dotted lines in intervals of tab width
 				line-wrap = breaks long lines on window edge only visually
@@ -802,6 +833,7 @@
 						0 = set extra margin on both sides of textfield to 0 pixel
 						1 = set extra margin on both sides of textfield to 1 pixel
 						2 = set extra margin on both sides of textfield to 2 pixel
+						3 = set extra margin on both sides of textfield to 3 pixel
 						4 = set extra margin on both sides of textfield to 4 pixel
 						6 = set extra margin on both sides of textfield to 6 pixel
 						8 = set extra margin on both sides of textfield to 8 pixel
@@ -828,6 +860,10 @@
 				search = toolbar with text seach and navigation functions
 				search-goto = goto searchbar and use find function
 			</toolbar>
+			<webpage>
+				documentation = open online documentation with your default browser
+				forum = go to a perl web forum based on current language setting
+			</webpage>
 			window-stay-on-top = application window remains always visible
 		</view>
 		<config>
@@ -1008,8 +1044,8 @@
 			word_begin = Word Begin
 			whole_word = Whole Word Only
 			regex = Regular Expression
-			auto_wrap = Auto Wrap
 			incremental = Incremental Search
+			auto_wrap = Auto Wrap
 			search_in = Search in
 			selection = Selection
 			document = Current Doc
