Import of LICHTKIND/Kephra-0.4.1_15 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.1_15
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.1_15.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/interface/mainmenu.yml
+++ b/share/config/interface/mainmenu.yml
@@ -367,6 +367,7 @@ full_menubar:
       -
         menu view_bars:
           - checkitem view-toolbar-main
+          - checkitem view-tabbar
           - checkitem view-toolbar-search
           - checkitem view-statusbar
       -
