--- a/share/config/localisation/cesky.conf
+++ b/share/config/localisation/cesky.conf
@@ -1017,6 +1017,7 @@
 	</help>
 	<info>
 		title = Info about
+		motto = Neter of software creation
 		mady_by = by
 		licensed = licensed under
 		detail = see under help > license for credits and
