--- a/share/config/localisation/deutsch.conf
+++ b/share/config/localisation/deutsch.conf
@@ -1017,6 +1017,7 @@
 	</help>
 	<info>
 		title = Info über
+		motto = Neter of software creation
 		mady_by = von
 		licensed = lizensiert under der
 		detail = siehe auch unter Hilfe > Lizensen für Dank und
