--- a/share/config/interface/mainmenu.yml
+++ b/share/config/interface/mainmenu.yml
@@ -402,8 +402,8 @@ full_menubar:
       - item view-editpanel-font
   -
     menu config:
-      - item view-dialog-config
-      -
+      - item view-dialog-config#
+      - #
       - menu config_app_lang
       -
       -
