Import of LICHTKIND/Kephra-0.4.2_1 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.2_1
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.2_1.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -202,11 +202,11 @@
 			delete-all = Kephra::Edit::Bookmark::delete_all()
 		</bookmark>
 		<tool>
-			note = Kephra::Plugin::Notepad::note()
-			note-selection = Kephra::Plugin::Notepad::append_selection()
-			interpreter-run-document = Kephra::Plugin::Output::run()
-			interpreter-stop-document = Kephra::Plugin::Output::stop()
-			output-inc = Kephra::Plugin::Output::display_inc()
+			note = Kephra::App::Panel::Notepad::note()
+			note-selection = Kephra::App::Panel::Notepad::append_selection()
+			interpreter-run-document = Kephra::App::Panel::Output::run()
+			interpreter-stop-document = Kephra::App::Panel::Output::stop()
+			output-inc = Kephra::App::Panel::Output::display_inc()
 		</tool>
 		<document>
 			auto-indention = Kephra::Document::Property::switch_autoindention()
@@ -346,8 +346,8 @@
 				</fold-toggle>
 			</editpanel>
 			<panel>
-				notepad = Kephra::Plugin::Notepad::switch_visibility()
-				output = Kephra::Plugin::Output::switch_visibility()
+				notepad = Kephra::App::Panel::Notepad::switch_visibility()
+				output = Kephra::App::Panel::Output::switch_visibility()
 			</panel>
 			statusbar = Kephra::App::StatusBar::switch_visibility()
 			statusbar-contexmenu = Kephra::App::StatusBar::switch_contextmenu_visibility()
@@ -483,8 +483,8 @@
 			selection = Kephra::Edit::can_copy()
 		</replace>
 		<tool-interpreter>
-			run-document = ! Kephra::Plugin::Output::is_running()
-			stop-document = Kephra::Plugin::Output::is_running()
+			run-document = ! Kephra::App::Panel::Output::is_running()
+			stop-document = Kephra::App::Panel::Output::is_running()
 		</tool-interpreter>
 	</enable>
 	<enable_event>
@@ -656,8 +656,8 @@
 				</margin>
 			</editpanel>
 			<panel>
-				notepad = Kephra::Plugin::Notepad::get_visibility()
-				output = Kephra::Plugin::Output::get_visibility()
+				notepad = Kephra::App::Panel::Notepad::get_visibility()
+				output = Kephra::App::Panel::Output::get_visibility()
 			</panel>
 			statusbar = Kephra::App::StatusBar::get_visibility()
 			statusbar-contexmenu = Kephra::App::StatusBar::get_contextmenu_visibility()
