Import of LICHTKIND/Kephra-0.4.2_8 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.2_8
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.2_8.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -176,30 +176,30 @@
 		</goto>
 		<bookmark>
 			<goto>
-				1 = Kephra::Edit::Bookmark::goto_nr(1)
-				2 = Kephra::Edit::Bookmark::goto_nr(2)
-				3 = Kephra::Edit::Bookmark::goto_nr(3)
-				4 = Kephra::Edit::Bookmark::goto_nr(4)
-				5 = Kephra::Edit::Bookmark::goto_nr(5)
-				6 = Kephra::Edit::Bookmark::goto_nr(6)
-				7 = Kephra::Edit::Bookmark::goto_nr(7)
-				8 = Kephra::Edit::Bookmark::goto_nr(8)
-				9 = Kephra::Edit::Bookmark::goto_nr(9)
-				0 = Kephra::Edit::Bookmark::goto_nr(0)
+				1 = Kephra::Edit::Marker::goto_bookmark(1)
+				2 = Kephra::Edit::Marker::goto_bookmark(2)
+				3 = Kephra::Edit::Marker::goto_bookmark(3)
+				4 = Kephra::Edit::Marker::goto_bookmark(4)
+				5 = Kephra::Edit::Marker::goto_bookmark(5)
+				6 = Kephra::Edit::Marker::goto_bookmark(6)
+				7 = Kephra::Edit::Marker::goto_bookmark(7)
+				8 = Kephra::Edit::Marker::goto_bookmark(8)
+				9 = Kephra::Edit::Marker::goto_bookmark(9)
+				0 = Kephra::Edit::Marker::goto_bookmark(0)
 			</goto>
 			<toggle>
-				1 = Kephra::Edit::Bookmark::toggle_nr(1)
-				2 = Kephra::Edit::Bookmark::toggle_nr(2)
-				3 = Kephra::Edit::Bookmark::toggle_nr(3)
-				4 = Kephra::Edit::Bookmark::toggle_nr(4)
-				5 = Kephra::Edit::Bookmark::toggle_nr(5)
-				6 = Kephra::Edit::Bookmark::toggle_nr(6)
-				7 = Kephra::Edit::Bookmark::toggle_nr(7)
-				8 = Kephra::Edit::Bookmark::toggle_nr(8)
-				9 = Kephra::Edit::Bookmark::toggle_nr(9)
-				0 = Kephra::Edit::Bookmark::toggle_nr(0)
+				1 = Kephra::Edit::Marker::toggle_bookmark(1)
+				2 = Kephra::Edit::Marker::toggle_bookmark(2)
+				3 = Kephra::Edit::Marker::toggle_bookmark(3)
+				4 = Kephra::Edit::Marker::toggle_bookmark(4)
+				5 = Kephra::Edit::Marker::toggle_bookmark(5)
+				6 = Kephra::Edit::Marker::toggle_bookmark(6)
+				7 = Kephra::Edit::Marker::toggle_bookmark(7)
+				8 = Kephra::Edit::Marker::toggle_bookmark(8)
+				9 = Kephra::Edit::Marker::toggle_bookmark(9)
+				0 = Kephra::Edit::Marker::toggle_bookmark(0)
 			</toggle>
-			delete-all = Kephra::Edit::Bookmark::delete_all()
+			delete-all = Kephra::Edit::Marker::delete_all_bookmarks()
 		</bookmark>
 		<tool>
 			note = Kephra::App::Panel::Notepad::note()
@@ -207,6 +207,7 @@
 			interpreter-run-document = Kephra::App::Panel::Output::run()
 			interpreter-stop-document = Kephra::App::Panel::Output::stop()
 			output-inc = Kephra::App::Panel::Output::display_inc()
+			choose-color = Kephra::Dialog::choose_color()
 		</tool>
 		<document>
 			auto-indention = Kephra::Document::Property::switch_autoindention()
@@ -222,6 +223,10 @@
 				cr = Kephra::Document::Property::convert_EOL('cr')
 				lf = Kephra::Document::Property::convert_EOL('lf')
 			</EOL>
+			<encoding>
+				8bit = Kephra::Document::Property::set_codepage('8bit')
+				utf8 = Kephra::Document::Property::set_codepage('utf8')
+			</encoding>
 			<move>
 				left = Kephra::Document::Change::move_left()
 				right = Kephra::Document::Change::move_right()
@@ -516,8 +521,8 @@
 			selection = document.text.select
 		</replace>
 		<tool-interpreter>
-			run-document = plugin.output.run
-			stop-document = plugin.output.run
+			run-document = panel.output.run
+			stop-document = panel.output.run
 		</tool-interpreter>
 	</enable_event>
 	<state>
@@ -540,16 +545,16 @@
 		</search>
 		<bookmark>
 			<goto>
-				1 = Kephra::Edit::Bookmark::is_set(1)
-				2 = Kephra::Edit::Bookmark::is_set(2)
-				3 = Kephra::Edit::Bookmark::is_set(3)
-				4 = Kephra::Edit::Bookmark::is_set(4)
-				5 = Kephra::Edit::Bookmark::is_set(5)
-				6 = Kephra::Edit::Bookmark::is_set(6)
-				7 = Kephra::Edit::Bookmark::is_set(7)
-				8 = Kephra::Edit::Bookmark::is_set(8)
-				9 = Kephra::Edit::Bookmark::is_set(9)
-				0 = Kephra::Edit::Bookmark::is_set(0)
+				1 = Kephra::Edit::Marker::bookmark_is_set(1)
+				2 = Kephra::Edit::Marker::bookmark_is_set(2)
+				3 = Kephra::Edit::Marker::bookmark_is_set(3)
+				4 = Kephra::Edit::Marker::bookmark_is_set(4)
+				5 = Kephra::Edit::Marker::bookmark_is_set(5)
+				6 = Kephra::Edit::Marker::bookmark_is_set(6)
+				7 = Kephra::Edit::Marker::bookmark_is_set(7)
+				8 = Kephra::Edit::Marker::bookmark_is_set(8)
+				9 = Kephra::Edit::Marker::bookmark_is_set(9)
+				0 = Kephra::Edit::Marker::bookmark_is_set(0)
 			</goto>
 		</bookmark>
 		<document>
@@ -560,6 +565,10 @@
 				cr = Kephra::Document::Property::get_EOL_mode() eq 'cr'
 				lf = Kephra::Document::Property::get_EOL_mode() eq 'lf'
 			</EOL>
+			<encoding>
+				8bit = Kephra::Document::Property::get_codepage() eq '8bit'
+				utf8 = Kephra::Document::Property::get_codepage() eq 'utf8'
+			</encoding>
 			<readonly>
 				as-attr = Kephra::Document::Property::get_readonly() eq 'protect'
 				on = Kephra::Document::Property::get_readonly() eq 'on'
@@ -675,8 +684,8 @@
 	</state>
 	<state_event>
 		<view>
-			panel-notepad = plugin.notepad.visible
-			panel-output = plugin.output.visible
+			panel-notepad = panel.notepad.visible
+			panel-output = panel.output.visible
 			editpanel-line-wrap = editpanel.autowrap
 			window-stay-on-top = app.window.ontop
 		</view>
