--- a/share/config/localisation/deutsch.conf
+++ b/share/config/localisation/deutsch.conf
@@ -10,70 +10,86 @@
 		untitled = unbenannt
 	</general>
 	<menu>
-		file = &Datei
-		file_open = Öffnen
-		file_save = Speichern
-		file_close = Schließen
-		file_history = &Zuletzt Verwendete
-		file_session = &Gruppe
-		file_insert_templates = &Templates
-		edit = Bearbeiten
-		edit_changes = Änderungen
-		current_line = &Zeile
-		selection = Markierung
-		selection_format = Formatieren
-		selection_comment = Kommentieren
-		selection_convert = Konvertieren
-		search = Suchen
-		search_attributes = Eigenschaften
-		find_functions = Suchfunktionen
-		replace_functions = Ersetzfunktionen
-		bookmark_goto = Gehe Zu Lesezeichen
-		bookmark_toggle = Lesezeichen Umschalten
-		tools = Werkzeuge
-		document = Do&kument
-		document_change = Wähle
-		document_convert = Konvertieren
-		document_syntaxmode = Syntaxmode
-		document_syntaxmode_A-M = A - M
-		document_syntaxmode_N-Z = N - Z
-		document_syntaxmode_compiled = Kompilierte
-		document_syntaxmode_interpreted = Interpretierte
-		document_syntaxmode_data_structure = Datenstruktur
-		document_syntaxmode_document = Auszeichnungs
-		document_syntaxmode_web = Internet
-		document_syntaxmode_special = Spezial
-		document_tab_width = Tab Breite
-		document_lineendchar = Zeilenendzeichen
-		document_readonly = Schreibschutz
-		view = Ansicht
-		view_panel = Panel
-		view_bars = Leisten
-		view_contextmenu = Kontextmenüs
-		view_editpanel_contexmenu = Editor
-		view_textmargin = Textrand
-		view_text_fold = Textfalten
-		config = Einstellungen
-		config_app_lang = Sprache
-		config_global = Haupteinstellungen
-		config_interface = Benutzerschnittstellen
-		config_localisation = Sprachdateien
-		config_syntaxmode_A-M = Syntaxmodi A - M
-		config_syntaxmode_N-Z = Syntaxmodi N - Z
-		help = Hilfe
+		<label>
+			file = &Datei
+			file_open = Öffnen
+			file_save = Speichern
+			file_close = Schließen
+			file_history = &Zuletzt Verwendete
+			file_session = &Gruppe
+			file_insert_templates = &Templates
+			edit = Bearbeiten
+			edit_changes = Änderungen
+			current_line = &Zeile
+			selection = Markierung
+			selection_format = Formatieren
+			selection_comment = Kommentieren
+			selection_convert = Konvertieren
+			search = Suchen
+			search_attributes = Eigenschaften
+			find_functions = Suchfunktionen
+			replace_functions = Ersetzfunktionen
+			bookmark_goto = Gehe Zu Lesezeichen
+			bookmark_toggle = Lesezeichen Umschalten
+			tools = Werkzeuge
+			document = Do&kument
+			document_change = Wähle
+			document_convert = Konvertieren
+			document_syntaxmode = Syntaxmode
+			document_syntaxmode_A-M = A - M
+			document_syntaxmode_N-Z = N - Z
+			document_syntaxmode_compiled = Kompilierte
+			document_syntaxmode_interpreted = Interpretierte
+			document_syntaxmode_data_structure = Datenstruktur
+			document_syntaxmode_document = Auszeichnungs
+			document_syntaxmode_web = Internet
+			document_syntaxmode_special = Spezial
+			document_encoding = Zeichensatz
+			document_tab_width = Tab Breite
+			document_lineendchar = Zeilenendzeichen
+			document_readonly = Schreibschutz
+			view = Ansicht
+			view_panel = Panel
+			view_bars = Leisten
+			view_contextmenu = Kontextmenüs
+			view_editpanel_contexmenu = Editor
+			view_textmargin = Textrand
+			view_text_fold = Textfalten
+			config = Einstellungen
+			config_app_lang = Sprache
+			config_global = Haupteinstellungen
+			config_interface = Benutzerschnittstellen
+			config_localisation = Sprachdateien
+			config_syntaxmode_A-M = Syntaxmodi A - M
+			config_syntaxmode_N-Z = Syntaxmodi N - Z
+			help = Hilfe
+		</label>
+		<help>
+		</help>
 	</menu>
 	<status>
-		chars = Zeichen
-		column = Spalte
-		line = Zeile
-		lines = Zeilen
-		selection = Markierung
-		soft_tabs = weiche tabs
-		hard_tabs = harte tabs
-		now_is = jetzt ist
-		last_change = zuletzt geändert
-		date = Datum
-		time = Zeit
+		<label>
+			chars = Zeichen
+			column = Spalte
+			line = Zeile
+			lines = Zeilen
+			selection = Markierung
+			soft_tabs = weiche tabs
+			hard_tabs = harte tabs
+			now_is = jetzt ist
+			last_change = zuletzt geändert
+			date = Datum
+			time = Zeit
+		</label>
+		<help>
+			cursor = Position des Caret (Textcursor)
+			selection = Größe der Textauswahl oder prozentuale Position
+			syntaxmode = ändert den gewählten Syntaxmodus
+			codepage = Einstellungen der Kodierung
+			tab = Benutzung und Sichtbarkeit von Tabulatoren und Leerzeichen
+			EOL = Änderung und Sichtbarkeit von der Zeilenendzeichen
+			message = Nachrichtenfeld, auch verschiedene Informationen zum Dokument
+		</help>
 	</status>
 </app>
 <commandlist>
@@ -276,6 +292,7 @@
 			interpreter-run-document = Start
 			interpreter-stop-document = Stop
 			output-inc = @INC
+			choose-color = Farbauswahl
 		</tool>
 		<document>
 			auto-indention = Autoeinrückung
@@ -291,6 +308,10 @@
 				prev = Voriges
 				next = Nächtes
 			</change>
+			<encoding>
+				8bit = 8 Bit
+				utf8 = UTF-8
+			</encoding>
 			<move>
 				left = Nach Links
 				right = Nach Rechts
@@ -704,6 +725,7 @@
 			interpreter-run-document = starte aktuelles Programm und zeig Ergebnis im Outputpanel
 			interpreter-stop-document = halte Interpreterprozess des Oututpanels an
 			output-inc = zeige die @INC-Pfade im Ausgabepanel
+			choose-color = zeigt markierten Text als Farbe und ermöglicht neue Auswahl
 		</tool>
 		<document>
 			auto-indention = rückt bei Enter neue Zeilen wie vorige ein
@@ -719,6 +741,10 @@
 				prev = wechsle zum Dokument mit der nächstniedrigen Nummer
 				next = wechsle zum Dokument mit der nächsthöheren Nummer
 			</change>
+			<encoding>
+				8bit = konvertiert Zeichensatz des Dokuments zu 8 Bit (ASCII)
+				utf8 = konvertiert Zeichensatz des Dokuments zu UTF-8 (Unicode)
+			</encoding>
 			<move>
 				left = verschiebe aktuelles Dokument in der Reiterleiste eins nach links
 				right = verschiebe aktuelles Dokument in der Reiterleiste eins nach rechts
