--- a/share/config/localisation/norsk.conf
+++ b/share/config/localisation/norsk.conf
@@ -10,70 +10,86 @@
 		untitled = Navnløs
 	</general>
 	<menu>
-		file = &Fil
-		file_open = Åpne
-		file_save = Lagre
-		file_close = Lukk
-		file_history = &Nylig brykt
-		file_session = &Gruppe
-		file_insert_templates = &Maler
-		edit = Rediger
-		edit_changes = Endringer
-		current_line = &Linje
-		selection = Merking
-		selection_format = Formater
-		selection_comment = Kommenter
-		selection_convert = Konverter
-		search = Søk
-		search_attributes = Egenskaper
-		find_functions = Søkefunksjoner
-		replace_functions = Erstattningsfunksjoner
-		bookmark_goto = Gå til bokmerke
-		bookmark_toggle = bytt bokmerker
-		tools = Verktøy
-		document = Do&kument
-		document_change = Velg
-		document_convert = Konvertieren
-		document_syntaxmode = Syntaxmodus
-		document_syntaxmode_A-M = A - M
-		document_syntaxmode_N-Z = N - Z
-		document_syntaxmode_compiled = Kompilerte
-		document_syntaxmode_interpreted = Interpreterte
-		document_syntaxmode_data_structure = Datastruktur
-		document_syntaxmode_document = Markeringsspråk
-		document_syntaxmode_web = Internett
-		document_syntaxmode_special = Andre
-		document_tab_width = Tab Bredde
-		document_lineendchar = Zeilenendzeichen
-		document_readonly = Skrivebeskyttelse
-		view = Vis
-		view_panel = Verktøylinje
-		view_bars = Verktøylinjer
-		view_contextmenu = Kontekstmeny
-		view_editpanel_contexmenu = Editor
-		view_textmargin = Tekstkantavstand
-		view_text_fold = Textfalten
-		config = Instillinger
-		config_app_lang = Språk
-		config_global = Hovedinstillinger
-		config_interface = Brukergrensesnittet
-		config_localisation = Språkfiler
-		config_syntaxmode_A-M = Syntaxmodi A - M
-		config_syntaxmode_N-Z = Syntaxmodi N - Z
-		help = Hjelp
+		<label>
+			file = &Fil
+			file_open = Åpne
+			file_save = Lagre
+			file_close = Lukk
+			file_history = &Nylig brykt
+			file_session = &Gruppe
+			file_insert_templates = &Maler
+			edit = Rediger
+			edit_changes = Endringer
+			current_line = &Linje
+			selection = Merking
+			selection_format = Formater
+			selection_comment = Kommenter
+			selection_convert = Konverter
+			search = Søk
+			search_attributes = Egenskaper
+			find_functions = Søkefunksjoner
+			replace_functions = Erstattningsfunksjoner
+			bookmark_goto = Gå til bokmerke
+			bookmark_toggle = bytt bokmerker
+			tools = Verktøy
+			document = Do&kument
+			document_change = Velg
+			document_convert = Konvertieren
+			document_syntaxmode = Syntaxmodus
+			document_syntaxmode_A-M = A - M
+			document_syntaxmode_N-Z = N - Z
+			document_syntaxmode_compiled = Kompilerte
+			document_syntaxmode_interpreted = Interpreterte
+			document_syntaxmode_data_structure = Datastruktur
+			document_syntaxmode_document = Markeringsspråk
+			document_syntaxmode_web = Internett
+			document_syntaxmode_special = Andre
+			document_encoding = Encoding
+			document_tab_width = Tab Bredde
+			document_lineendchar = Zeilenendzeichen
+			document_readonly = Skrivebeskyttelse
+			view = Vis
+			view_panel = Verktøylinje
+			view_bars = Verktøylinjer
+			view_contextmenu = Kontekstmeny
+			view_editpanel_contexmenu = Editor
+			view_textmargin = Tekstkantavstand
+			view_text_fold = Textfalten
+			config = Instillinger
+			config_app_lang = Språk
+			config_global = Hovedinstillinger
+			config_interface = Brukergrensesnittet
+			config_localisation = Språkfiler
+			config_syntaxmode_A-M = Syntaxmodi A - M
+			config_syntaxmode_N-Z = Syntaxmodi N - Z
+			help = Hjelp
+		</label>
+		<help>
+		</help>
 	</menu>
 	<status>
-		chars = Tegn
-		column = Spalt
-		line = Linje
-		lines = Linjer
-		selection = Markering
-		soft_tabs = myke faner
-		hard_tabs = harde faner
-		now_is = nå er
-		last_change = sist endret
-		date = dato
-		time = tid
+		<label>
+			chars = Tegn
+			column = Spalt
+			line = Linje
+			lines = Linjer
+			selection = Markering
+			soft_tabs = myke faner
+			hard_tabs = harde faner
+			now_is = nå er
+			last_change = sist endret
+			date = dato
+			time = tid
+		</label>
+		<help>
+			cursor = caret (text cursor) position
+			selection = selection size or position in percentage
+			syntaxmode = changes the current set syntaxmode
+			codepage = encoding settings
+			tab = change the use of tabs and spaces
+			EOL = view or change the end of line character
+			message = info field, can also show infos about the current file
+		</help>
 	</status>
 </app>
 <commandlist>
@@ -276,6 +292,7 @@
 			interpreter-run-document = Start
 			interpreter-stop-document = Stop
 			output-inc = @INC
+			choose-color = Color Picker
 		</tool>
 		<document>
 			auto-indention = Autoeinrückung
@@ -291,6 +308,10 @@
 				prev = Voriges
 				next = Nächtes
 			</change>
+			<encoding>
+				8bit = 8 Bit
+				utf8 = UTF-8
+			</encoding>
 			<move>
 				left = Nach Links
 				right = Nach Rechts
@@ -704,6 +725,7 @@
 			interpreter-run-document = starte aktuelles Programm und zeig Ergebnis im Outputpanel
 			interpreter-stop-document = halte Interpreterprozess des Oututpanels an
 			output-inc = zeige die @INC-Pfade im Ausgabepanel
+			choose-color = display text selection as color and choose a new from a rainbow
 		</tool>
 		<document>
 			auto-indention = rückt bei Enter neue Zeilen wie vorige ein
@@ -719,6 +741,10 @@
 				prev = wechsle zum Dokument mit der nächstniedrigen Nummer
 				next = wechsle zum Dokument mit der nächsthöheren Nummer
 			</change>
+			<encoding>
+				8bit = converts document encoding into 8 Bit
+				utf8 = converts document encoding into UTF-8
+			</encoding>
 			<move>
 				left = verschiebe aktuelles Dokument in der Reiterleiste eins nach links
 				right = verschiebe aktuelles Dokument in der Reiterleiste eins nach rechts
